# makefile-help

./: LICENSE  Makefile  README.md  pyproject.toml
makefile_help/: __init__.py  __main__.py
tests/: test_makefile_help.py
