[tool.poetry]
name = "makefile-help"
version = "0.1.0"
description = "Autogenerates pretty Makefile help"
authors = ["simonwardjones <simonwardjones@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
makefile-help = 'makefile_help.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

