[tool.poetry]
name = "makefile-help"
version = "0.1.1"
description = "Autogenerates pretty Makefile help"
license="MIT"
authors = ["simonwardjones <simonwardjones@yahoo.co.uk>"]
readme="README.md"
homepage="https://github.com/simonwardjones/makefile-help"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Terminals",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
makefile-help = 'makefile_help.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

